# NCNN_Android_Pose2d

./: README.md
multi_pose2d/: local.properties
multi_pose2d/app/: build.gradle
multi_pose2d/app/src/main/assets/: LargePose.param
multi_pose2d/app/src/main/jni/: CMakeLists.txt  posedet.cpp  posedet.h
single_pose2d/: README.md
single_pose2d/app/src/main/jni/: posedet.cpp  posedet.h  posedetncnn.cpp
single_pose2d/app/src/main/res/values/: strings.xml
